--- a/myproject/app.yaml
+++ b/myproject/app.yaml
@@ -1,7 +1,12 @@
 # [START django_app]
 runtime: python37
-instance_class: F2
+instance_class: F1
 service: default
+
+# Computing resources
+automatic_scaling:
+  min_instances: 0
+  max_instances: 1
 
 handlers:
 # This configures Google App Engine to serve the files in the app's static
